--- a/Done/TableViewCells/ReelsTableViewCell.xib
+++ b/Done/TableViewCells/ReelsTableViewCell.xib
@@ -21,9 +21,9 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QzR-Sx-0JZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="843"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1dK-qh-FxM">
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="1dK-qh-FxM">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="843"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MXa-id-eDD">
                                 <rect key="frame" x="140" y="793" width="170" height="40"/>
@@ -142,28 +142,42 @@
                                             <constraint firstItem="IyR-lp-kYk" firstAttribute="centerX" secondItem="wC7-No-i6t" secondAttribute="centerX" id="xqh-IW-iTb"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh eu diam nonummy nibh" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P4j-dl-9NT">
-                                        <rect key="frame" x="10" y="45" width="280" height="29"/>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh eu diam nonummy nibh" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P4j-dl-9NT">
+                                        <rect key="frame" x="10" y="45" width="280" height="25"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar.badge.clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="am0-Uw-tbu">
-                                        <rect key="frame" x="10" y="81.666666666666671" width="11.333333333333332" height="8.6666666666666714"/>
+                                        <rect key="frame" x="9.9999999999999982" y="76.666666666666671" width="16.333333333333329" height="13.666666666666671"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="10" id="0qy-t5-W0F"/>
-                                            <constraint firstAttribute="height" constant="10" id="fnA-Sj-lBu"/>
+                                            <constraint firstAttribute="width" constant="15" id="0qy-t5-W0F"/>
+                                            <constraint firstAttribute="height" constant="15" id="fnA-Sj-lBu"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17-Jan-2023 11:22" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CFB-I9-eX1">
-                                        <rect key="frame" x="25" y="80" width="267" height="12"/>
+                                        <rect key="frame" x="30" y="76" width="262" height="15"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="12" id="Q15-o0-saL"/>
+                                            <constraint firstAttribute="height" constant="15" id="Q15-o0-saL"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                <size key="value" width="1" height="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                <real key="value" value="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                <real key="value" value="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -185,7 +199,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="1dK-qh-FxM" secondAttribute="bottom" id="6tO-Jj-l7c"/>
                             <constraint firstItem="MXa-id-eDD" firstAttribute="top" secondItem="vOH-wc-RWr" secondAttribute="bottom" constant="10" id="FLX-vM-H4h"/>
@@ -204,6 +218,7 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="QzR-Sx-0JZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="JFp-Ii-dWl"/>
                     <constraint firstAttribute="trailing" secondItem="QzR-Sx-0JZ" secondAttribute="trailing" id="YR8-5w-gGs"/>
@@ -213,6 +228,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="dateLbl" destination="CFB-I9-eX1" id="l3h-KP-gcO"/>
                 <outlet property="marqueeLabel" destination="P4j-dl-9NT" id="3D5-gn-ZMb"/>
                 <outlet property="playerView" destination="1dK-qh-FxM" id="v8p-cA-gQD"/>
                 <outlet property="reloadBtn" destination="vmF-65-30i" id="lNM-eb-H7N"/>
@@ -229,8 +245,8 @@
         <image name="home_user_add_icon" width="15.5" height="15.5"/>
         <image name="home_user_chat_icon" width="35.5" height="34"/>
         <image name="home_verified_icon" width="18.5" height="18.5"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
