--- a/Done/TableViewCells/ViewStatusTableViewCell.xib
+++ b/Done/TableViewCells/ViewStatusTableViewCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" customClass="ViewStatusTableViewCell" customModule="Done" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="ViewStatusTableViewCell" customModule="Done" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nWz-3P-2dO">
-                        <rect key="frame" x="5" y="2" width="310" height="106"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nWz-3P-2dO">
+                        <rect key="frame" x="5" y="2" width="310" height="141"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9kh-Fg-At1">
                                 <rect key="frame" x="2" y="2" width="43.666666666666664" height="19"/>
@@ -63,8 +63,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3J3-AL-Wi8">
-                                <rect key="frame" x="42" y="46" width="223" height="0.0"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3J3-AL-Wi8">
+                                <rect key="frame" x="42" y="46" width="223" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="VBu-ew-xRn"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -77,7 +80,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RUW-Oc-aUE">
-                                <rect key="frame" x="5" y="80" width="20" height="20"/>
+                                <rect key="frame" x="5" y="86" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="SVU-xt-wD0"/>
                                     <constraint firstAttribute="height" constant="20" id="mam-Bm-J7G"/>
@@ -89,9 +92,9 @@
                                 </buttonConfiguration>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mark as done" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jn5-Zm-AQv">
-                                <rect key="frame" x="30" y="81.666666666666671" width="90" height="17"/>
+                                <rect key="frame" x="30" y="86" width="90" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="YSX-1F-IIv"/>
+                                    <constraint firstAttribute="height" constant="20" id="YSX-1F-IIv"/>
                                     <constraint firstAttribute="width" constant="90" id="fX9-eZ-dSc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
@@ -99,7 +102,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHX-3g-Jug">
-                                <rect key="frame" x="135" y="80" width="20" height="20"/>
+                                <rect key="frame" x="135" y="86" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="3rL-ea-3Mp"/>
                                     <constraint firstAttribute="height" constant="20" id="Dw2-JG-97o"/>
@@ -111,7 +114,7 @@
                                 </buttonConfiguration>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mark as Approved" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21S-e8-eHA">
-                                <rect key="frame" x="160" y="81.666666666666671" width="145" height="17"/>
+                                <rect key="frame" x="160" y="87.666666666666671" width="145" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="kbY-0x-CSj"/>
                                 </constraints>
@@ -129,7 +132,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZR-w2-Egs">
-                                <rect key="frame" x="0.0" y="102" width="310" height="1"/>
+                                <rect key="frame" x="0.0" y="108" width="310" height="1"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="zc4-so-eL8"/>
@@ -153,7 +156,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SkJ-eY-Mq4">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SkJ-eY-Mq4">
                                 <rect key="frame" x="11" y="77" width="283" height="2"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -178,6 +181,7 @@
                             <constraint firstAttribute="trailing" secondItem="TWk-K3-Kf1" secondAttribute="trailing" constant="8" id="2ZS-Hk-CvR"/>
                             <constraint firstItem="ecJ-NN-eFU" firstAttribute="top" secondItem="9kh-Fg-At1" secondAttribute="bottom" constant="4" id="3dF-SQ-6Ly"/>
                             <constraint firstItem="3QU-MY-EWI" firstAttribute="leading" secondItem="nWz-3P-2dO" secondAttribute="leading" constant="1" id="5lg-dc-N3W"/>
+                            <constraint firstItem="jn5-Zm-AQv" firstAttribute="top" secondItem="3J3-AL-Wi8" secondAttribute="bottom" constant="5" id="8Qb-ch-9dI"/>
                             <constraint firstAttribute="trailing" secondItem="x2t-4h-qtv" secondAttribute="trailing" constant="2" id="8rV-7P-l24"/>
                             <constraint firstItem="4O5-kJ-Rny" firstAttribute="top" secondItem="ecJ-NN-eFU" secondAttribute="bottom" constant="5" id="BPJ-uZ-kUY"/>
                             <constraint firstItem="uZR-w2-Egs" firstAttribute="leading" secondItem="nWz-3P-2dO" secondAttribute="leading" id="BvX-S2-2KR"/>
@@ -186,6 +190,7 @@
                             <constraint firstItem="3J3-AL-Wi8" firstAttribute="top" secondItem="ecJ-NN-eFU" secondAttribute="bottom" constant="5" id="Ecv-2u-7yE"/>
                             <constraint firstItem="21S-e8-eHA" firstAttribute="centerY" secondItem="eHX-3g-Jug" secondAttribute="centerY" id="Fjo-oo-cA2"/>
                             <constraint firstItem="3J3-AL-Wi8" firstAttribute="leading" secondItem="4O5-kJ-Rny" secondAttribute="trailing" constant="5" id="HR3-ai-CbW"/>
+                            <constraint firstItem="RUW-Oc-aUE" firstAttribute="centerY" secondItem="jn5-Zm-AQv" secondAttribute="centerY" id="IvK-sd-DxG"/>
                             <constraint firstItem="eHX-3g-Jug" firstAttribute="leading" secondItem="jn5-Zm-AQv" secondAttribute="trailing" constant="15" id="KCo-jG-N7J"/>
                             <constraint firstAttribute="trailing" secondItem="BR4-BJ-CyO" secondAttribute="trailing" constant="2" id="Kh4-st-kO4"/>
                             <constraint firstAttribute="trailing" secondItem="uZR-w2-Egs" secondAttribute="trailing" id="Kuw-Xo-e7X"/>
@@ -195,18 +200,16 @@
                             <constraint firstAttribute="trailing" secondItem="21S-e8-eHA" secondAttribute="trailing" constant="5" id="O1M-oL-9ua"/>
                             <constraint firstItem="TWk-K3-Kf1" firstAttribute="centerY" secondItem="9kh-Fg-At1" secondAttribute="centerY" id="Phm-NS-qtw"/>
                             <constraint firstItem="4O5-kJ-Rny" firstAttribute="leading" secondItem="3QU-MY-EWI" secondAttribute="trailing" constant="1" id="PkC-Uy-vOF"/>
-                            <constraint firstItem="RUW-Oc-aUE" firstAttribute="top" secondItem="SkJ-eY-Mq4" secondAttribute="bottom" constant="1" id="PzD-Fa-qzD"/>
                             <constraint firstItem="SkJ-eY-Mq4" firstAttribute="top" secondItem="4O5-kJ-Rny" secondAttribute="bottom" constant="1" id="QBQ-Wa-nFQ"/>
+                            <constraint firstItem="uZR-w2-Egs" firstAttribute="top" secondItem="jn5-Zm-AQv" secondAttribute="bottom" constant="2" id="QSn-1l-Apo"/>
                             <constraint firstItem="RUW-Oc-aUE" firstAttribute="leading" secondItem="nWz-3P-2dO" secondAttribute="leading" constant="5" id="TME-mf-K68"/>
                             <constraint firstItem="3QU-MY-EWI" firstAttribute="top" secondItem="ecJ-NN-eFU" secondAttribute="bottom" constant="5" id="Ulx-5k-jVx"/>
-                            <constraint firstItem="jn5-Zm-AQv" firstAttribute="centerY" secondItem="RUW-Oc-aUE" secondAttribute="centerY" id="Uo0-iD-ZB1"/>
                             <constraint firstItem="21S-e8-eHA" firstAttribute="leading" secondItem="eHX-3g-Jug" secondAttribute="trailing" constant="5" id="YPK-Bk-sY1"/>
                             <constraint firstItem="PPL-KN-hAc" firstAttribute="centerY" secondItem="ecJ-NN-eFU" secondAttribute="centerY" id="Z2a-oE-qCy"/>
                             <constraint firstItem="SkJ-eY-Mq4" firstAttribute="leading" secondItem="nWz-3P-2dO" secondAttribute="leading" constant="11" id="dZq-R3-Itx"/>
                             <constraint firstItem="ecJ-NN-eFU" firstAttribute="leading" secondItem="9kh-Fg-At1" secondAttribute="leading" id="eTP-ug-bTU"/>
                             <constraint firstItem="TWk-K3-Kf1" firstAttribute="leading" secondItem="9kh-Fg-At1" secondAttribute="trailing" constant="15" id="kKD-Rt-gzH"/>
-                            <constraint firstItem="uZR-w2-Egs" firstAttribute="top" secondItem="RUW-Oc-aUE" secondAttribute="bottom" constant="2" id="lGO-jQ-f1F"/>
-                            <constraint firstAttribute="bottom" secondItem="uZR-w2-Egs" secondAttribute="bottom" constant="1" id="lz8-vu-0eK"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="uZR-w2-Egs" secondAttribute="bottom" constant="1" id="lz8-vu-0eK"/>
                             <constraint firstAttribute="trailing" secondItem="SkJ-eY-Mq4" secondAttribute="trailing" constant="16" id="oa7-a3-vi9"/>
                             <constraint firstItem="BR4-BJ-CyO" firstAttribute="leading" secondItem="3J3-AL-Wi8" secondAttribute="trailing" constant="10" id="rwZ-Pu-YX0"/>
                             <constraint firstItem="9kh-Fg-At1" firstAttribute="top" secondItem="nWz-3P-2dO" secondAttribute="top" constant="2" id="uv8-qM-LW0"/>
@@ -239,7 +242,7 @@
                 <outlet property="statusLbl" destination="TWk-K3-Kf1" id="dZG-ch-16v"/>
                 <outlet property="unreadBtn" destination="3QU-MY-EWI" id="KoG-RV-3V1"/>
             </connections>
-            <point key="canvasLocation" x="138.93129770992365" y="20.422535211267608"/>
+            <point key="canvasLocation" x="138.93129770992365" y="32.74647887323944"/>
         </tableViewCell>
     </objects>
     <resources>
